# gengo

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
cmake/: gengo-extras.cmake.em
scripts/: CMakeLists.txt  gen_go.py  msg.go.template  srv.go.template
src/gengo/: __init__.py
