<?xml version="1.0"?>
<package>
  <name>gengo</name>
  <version>0.0.0</version>
  <description>Go ROS message and service generators</description>

  <maintainer email="akio7141@gmail.com">Akiyoshi Ochiai</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://ros.org/wiki/gengo</url> -->
  <url type="bugtracker">https://github.com/akio/gengo</url> -->

  <author email="akio7141@gmail.com">Akiyoshi Ochiai</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
  <build_depend>genmsg</build_depend>
  <run_depend>genmsg</run_depend>

  <export>
      <message_generator>go</message_generator>
  </export>
</package>
